# AutoAim

./: CMakeLists.txt  README.md
include/: ArmorDetectionServer.h  ArmorTracker.h  CoordinateTransformer.h  DataBuffer.h  ImageProcess.h  KalmanFilter.h  MotionEstimator.h  Pose.h  Protocal.h  Protocol.h  Quaternion.h  RotationCenterCalculator.h  ThreadPool.h  ThreadSafeQueue.h  VideoClient.h  Visualizer.h
other/: Protocol.cpp  Server.cpp  SingleThreadArmorDetectionServer.cpp  deserted_server.cpp  originalmain.cpp  server.cpp  simplified_main.cpp
src/: ArmorDetectionServer.cpp  ArmorTracker.cpp  CoordinateTransformer.cpp  ImageProcess.cpp  KalmanFilter.cpp  MotionEstimator.cpp  Pose.cpp  Protocal.cpp  Quaternion.cpp  RotationCenterCalculator.cpp  client.cpp  client1.cpp  main.cpp  server.cpp
src/client/: VideoClient.cpp  VidioClient.cpp
src/server/: ArmorDetectionServer.cpp  ArmorTracker.cpp  CoordinateTransformer.cpp  DataBuffer.cpp  ImageProcess.cpp  KalmanFilter.cpp  MotionEstimator.cpp  Pose.cpp  Protocol.cpp  RotationCenterCalculator.cpp  ThreadPool.cpp  Visualizer.cpp  server.cpp
